--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <title>Hello AngularJS</title>
-<link
-	href="css/angular-bootstrap.css"
-	rel="stylesheet">
+<link href="styles/style-guide.css" rel="stylesheet">
+<link href="styles/main.css" rel="stylesheet">
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
@@ -22,6 +21,12 @@
 	</div>
 	<div ng-view class="container"></div>
 	<script src="js/angular-bootstrap.js" type="text/javascript"></script>
-	<script src="js/hello.js"></script>
+	<script src="js/ifday.js"></script>
+	<script src="js/controllers/feedback.js"></script>
+	<script src="js/controllers/scan.js"></script>
+	<script src="js/controllers/share.js"></script>
+	<script src="js/controllers/upload.js"></script>
+	<script src="js/controllers/vote.js"></script>
+
 </body>
 </html>
