--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Hello AngularJS</title>
-<link href="styles/style-guide.css" rel="stylesheet">
+<link href="styles/styleguide.css" rel="stylesheet">
 <link href="styles/main.css" rel="stylesheet">
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
