natalie history page, header links

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 
-<body ng-app="hello" ng-cloak class="ng-cloak">
+<body ng-app="ifday" ng-cloak class="ng-cloak">
 	<!--
 	<div ng-controller="navigation as nav" class="container">
 		<ul class="nav nav-pills" role="tablist">
@@ -29,6 +29,6 @@
 	<script src="js/controllers/share.js"></script>
 	<script src="js/controllers/upload.js"></script>
 	<script src="js/controllers/vote.js"></script>
-
+	<script src="js/controllers/history.js"></script>
 </body>
 </html>
